<?xml version="1.0" encoding="utf-8"?>
<!--Code used from the following source for menu bar-->
<!--https://www.geeksforgeeks.org/bottom-navigation-bar-in-android/-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomNavigationView">

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_home_foreground"/>
<!--    <item-->
<!--        android:id="@+id/events"-->
<!--        android:title="Events"-->
<!--        android:icon="@drawable/ic_facility_foreground"/>-->
    <item
        android:id="@+id/camera"
        android:title="Camera"
        android:icon="@drawable/ic_camera_foreground"/>
    <item
        android:id="@+id/facility"
        android:title="Facility"
        android:icon="@drawable/facility_icon"/>
    <item
        android:id="@+id/account"
        android:title="Account"
        android:icon="@drawable/ic_person_foreground"/>

</menu>